# pqdss-ct-toolchain

./: .gitignore  .gitmodules  Jenkinsfile  README.md  analysis_nist_pqc_signatures.xlsx  binsec_testing.py  candidates_build.py  config.md  dockerfile  generic_functions.py  notes.md  parser.py  testing_tool.py  testing_tool_draft.py  tests_results.xlsx  toolchain_script.py  tools.py
binsec-from-source/: Dockerfile  README.md
candidates/code/cross/ct_tests/: CMakeLists.txt
candidates/code/cross/expanded_keys/: get_expanded_secret_key.c
candidates/code/less/: notes.md
candidates/code/less/ct_tests/: CMakeLists.txt  taint_crypto_sign.c
candidates/code/less/expanded_keys/: get_expanded_secret_key.c
candidates/code/less2/benchmarks/: bench.c  bench_252_192  bench_252_45  bench_252_68  bench_400_102  bench_400_220  bench_548_137  bench_548_345
candidates/isogeny/sqisign/: CMakeLists.txt
candidates/isogeny/sqisign/benchmarks/: bench.c  bench_lvl1
candidates/isogeny/sqisign/broadwell/: CMakeLists.txt
candidates/isogeny/sqisign/broadwell/src/: CMakeLists.txt  sqisign.c
candidates/isogeny/sqisign/src/: CMakeLists.txt
candidates/isogeny/sqisign_j/benchmarks/: bench.c  bench_lvl1  bench_lvl1_output.txt  bench_lvl3  bench_lvl3_output.txt  bench_lvl5  bench_lvl5_output.txt  sqisign_bench.txt
candidates/isogeny/sqisign_j/broadwell/: CMakeLists.txt
candidates/lattice/haetae/Optimized_Implementation/ctgrind/: CMakeLists.txt
candidates/lattice/haetae/Optimized_Implementation/ctgrind/haetae_keypair/: 2_output.txt  taint.c
candidates/lattice/haetae/Optimized_Implementation/ctgrind/haetae_sign/: 2_1_output.txt  taint.c
candidates/lattice/hawk/: Makefile
candidates/mpc-in-the-head/ryde/benchmarks/: ryde_bench.txt
candidates/mpc-in-the-head/sdith/: notes.md
candidates/mpc-in-the-head/sdith/Optimized_Implementation/sdith_cat5_short/: CMakeLists.txt
candidates/multivariate/mayo/: CMakeLists.txt
candidates/multivariate/mayo/Optimized_Implementation/ctgrind/src/mayo_1/: CMakeLists.txt
candidates/multivariate/mayo/Optimized_Implementation/ctgrind/src/mayo_1/mayo_keypair/: crypto_sign_keypair_mayo_1_output.txt  taint_crypto_sign_keypair.c
candidates/multivariate/mayo/Optimized_Implementation/ctgrind/src/mayo_1/mayo_sign/: crypto_sign_mayo_1_output.txt  taint_crypto_sign.c
candidates/multivariate/mayo/benchmarks/: mayo_bench.txt
candidates/multivariate/mayo/src/: CMakeLists.txt
candidates/multivariate/pqov/: Makefile
candidates/multivariate/pqov/pqov_nist_submission/: README
candidates/multivariate/qruov/benchmarks/: qruov_bench.txt
candidates/multivariate/qruov/src/: Makefile
candidates/multivariate/qruov2/src/: Makefile
candidates/multivariate/snova/: custom_bench.c  makefile
candidates/multivariate/snova/benchmarks/: snova_bench.txt
candidates/multivariate/snova/src/: Makefile  get_expanded_secret_key.c
candidates/multivariate/snova_draft/: custom_bench.c
ctgrind/: Makefile  test.c  test2.c  valgrind.patch
cttool-draft/: README.md  benchmarks.py  candidates.json  cli.py  errors.py  generic_templates.py  generics.py  generics_tests.json  generics_tests.py  main_test.py  mpc_package.json  package_new.json  pqc_signature.py  test.py  tools.py  utils.py
cttool-draft/cttool_includes/: toolchain_randombytes.h
cttoolchain/: README.md  cli.py  ct_toolchain.py  generics.py  generics_ct_tests.py  pqdss_benchmarks.py  pqdss_ct_tests.py  tools.py  utils.py
cttoolchain/cttool_includes/: poison.h
draft/: README.md  binsec_ctgrind_testing.py  binsec_testing.py  candidates_build.py  ct_toolchain.py  generic_functions.py  generic_templates.py  parser.py  target.py  testing_tool.py  toolchain_script.py  tools.py
examples/: tests.c  tests.h
flowtracker_test/Test/Folder/: Makefile  checkct.cfg  checkct_rej_sample.cfg  dude_cnt_comp.c  rej_sample_dude  rej_sample_dude.c  rej_sample_taint.c  rej_sample_test_harness.c  taint_cnt_comp.c  test_harness_cnt_comp.c
flowtracker_test/utils/: CMakeLists.txt  funct1.c  funct1.h  utils.c  utils.h
isogeny/sqisign/Reference_Implementation/: CMakeLists.txt  README.md
isogeny/sqisign/Reference_Implementation/binsec/sqisign_sign/: CMakeLists.txt  cfg_file.cfg  test_harness_sqisign_lvl1.c  test_harness_sqisign_lvl3.c  test_harness_sqisign_lvl5.c
isogeny/sqisign/Reference_Implementation/src/: CMakeLists.txt
isogeny/sqisign/Reference_Implementation/src/ec/ref/: CMakeLists.txt
isogeny/sqisign/Reference_Implementation/src/gf/ref/lvl5/: CMakeLists.txt
isogeny/sqisign/Reference_Implementation/src/id2iso/ref/: CMakeLists.txt
isogeny/sqisign/Reference_Implementation/src/precomp/ref/lvl5/: CMakeLists.txt
kyber/ref/: Makefile
linter/: Dockerfile  README.md  docker-compose.yml
multivariate/dme_sign/: ___All_Errors.txt
pqdss-toolchain/: Dockerfile  README.md
pqdss-toolchain/benchmarks/: install.sh
pqdss-toolchain/binsec/: install.sh
pqdss-toolchain/binsec/binsec/: binsec.opam  div.patch  dune-project
pqdss-toolchain/binsec/unisim_archisec/: aarch64dba.cc  amd64dba.cc  arm32dba.cc  diff.patch  ppc64dba.cc  unittest.ml
pqdss-toolchain/ct-tools/binsec/: install.sh  install_v09.sh
pqdss-toolchain/ct-tools/timecop/: install.sh
pqdss-toolchain/ct-tools/valgrind/: install.sh
pqdss-toolchain/ctverif/: README.md  install.sh
pqdss-toolchain/timecop/src/: toolchain_randombytes.h
pqdss-toolchain/toolchain-from-binsec-dockerfile/: Dockerfile
pqdss-toolchain/toolchain-from-binsec-source/: Dockerfile
pqdss-toolchain/toolchain-from-ubuntu-22-04/: Dockerfile
standalone-flowtracker_docker/: Dockerfile
toolchain/: Dockerfile
toolchain-scipts/: candidates_build.py  generic_functions.py  toolchain_script.py  tools.py
toolchain-scripts/: candidates_build.py  generic_functions.py  generic_templates.py  toolchain_script.py  tools.py
toolchain/ctgrind/: install.sh
toolchain/ctverif/: README.md
toolchain/ctverif_docker/: install.sh
toolchain/dudect/: install.sh
toolchain/valgrind/: install.sh
user_entry_point/: candidates.json  generics_tests.json
valgrind_need/: valgrind.patch
(+2283 files in other folders)
